p2/y.output
Terminals unused in grammar

    KW_IF
    KW_ELSE
    KW_RETURN
    KW_WHILE


Grammar

    0 $accept: Program $end

    1 Program: MainClass

    2 MainClass: KW_CLASS ID '{' StaticVarDeclList StaticMethodDeclList KW_PUBLIC KW_STATIC KW_VOID MAIN '(' KW_STRING '[' ']' ID ')' '{' StatementList '}' '}'

    3 VarDecl: Type ID ExpDecl VarDeclExpList ';'

    4 StaticVarDecl: KW_PRIVATE KW_STATIC VarDecl

    5 StaticVarDeclList: StaticVarDeclList StaticVarDecl
    6                  | ε

    7 VarDeclExpList: ',' ID ExpDecl VarDeclExpList
    8               | ε

    9 Statement: VarDecl
   10          | SYSTEM_OUT_PRINTLN '(' Exp ')' ';'
   11          | SYSTEM_OUT_PRINT '(' Exp ')' ';'
   12          | MethodCall

   13 StatementList: StatementList Statement
   14              | ε

   15 LeftValue: ID
   16          | ID Index

   17 Index: '[' Exp ']'
   18      | Index '[' Exp ']'

   19 Type: PrimeType
   20     | Type '[' ']'

   21 PrimeType: KW_INT
   22          | KW_BOOLEAN
   23          | KW_STRING

   24 MethodCall: ID '(' ExpList ')'
   25           | INTEGER_PARSE_INT '(' Exp ')'

   26 StaticMethodDecl: KW_PUBLIC KW_STATIC Type ID '(' FormalList ')' '{' StatementList '}'

   27 StaticMethodDeclList: StaticMethodDeclList StaticMethodDecl
   28                     | ε

   29 FormalList: Arg ArgList
   30           | ε

   31 Arg: Type ID

   32 ArgList: ',' Arg ArgList
   33        | ε

   34 Exp: Exp TOK_PLUS Term
   35    | Exp TOK_MINUS Term
   36    | Exp TOK_AND Term
   37    | Exp TOK_OR Term
   38    | Exp TOK_LESS Term
   39    | Exp TOK_GREAT Term
   40    | Exp TOK_LEQ Term
   41    | Exp TOK_GREQ Term
   42    | Exp TOK_EQ Term
   43    | Exp TOK_NEQ Term
   44    | TOK_NOT Factor
   45    | TOK_PLUS Factor
   46    | TOK_MINUS Factor
   47    | Term

   48 Term: Term TOK_MULT Factor
   49     | Term TOK_DIV Factor
   50     | Factor

   51 Factor: INTEGER_LITERAL
   52       | STRING_LITERAL
   53       | KW_TRUE
   54       | KW_FALSE
   55       | '(' Exp ')'
   56       | LeftValue
   57       | LeftValue '.' KW_LENGTH
   58       | MethodCall
   59       | KW_NEW PrimeType Index

   60 ExpDecl: '=' Exp
   61        | ε

   62 ExpList: Exp ExpTail
   63        | ε

   64 ExpTail: ',' Exp ExpTail
   65        | ε


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 2 10 11 24 25 26 55
    ')' (41) 2 10 11 24 25 26 55
    ',' (44) 7 32 64
    '.' (46) 57
    ';' (59) 3 10 11
    '=' (61) 60
    '[' (91) 2 17 18 20
    ']' (93) 2 17 18 20
    '{' (123) 2 26
    '}' (125) 2 26
    error (256)
    TOK_AND (258) 36
    TOK_OR (259) 37
    TOK_LESS (260) 38
    TOK_GREAT (261) 39
    TOK_LEQ (262) 40
    TOK_GREQ (263) 41
    TOK_NEQ (264) 43
    TOK_EQ (265) 42
    TOK_PLUS (266) 34 45
    TOK_MINUS (267) 35 46
    TOK_MULT (268) 48
    TOK_DIV (269) 49
    TOK_NOT (270) 44
    KW_BOOLEAN (271) 22
    KW_CLASS (272) 2
    KW_FALSE (273) 54
    KW_INT (274) 21
    MAIN (275) 2
    KW_PUBLIC (276) 2 26
    KW_TRUE (277) 53
    KW_VOID (278) 2
    KW_IF (279)
    KW_ELSE (280)
    KW_RETURN (281)
    KW_WHILE (282)
    KW_LENGTH (283) 57
    KW_STATIC (284) 2 4 26
    KW_STRING (285) 2 23
    KW_NEW (286) 59
    KW_PRIVATE (287) 4
    SYSTEM_OUT_PRINT (288) 11
    SYSTEM_OUT_PRINTLN (289) 10
    INTEGER_PARSE_INT (290) 25
    INTEGER_LITERAL <integer> (291) 51
    STRING_LITERAL <string> (292) 52
    ID <string> (293) 2 3 7 15 16 24 26 31


Nonterminals, with rules where they appear

    $accept (49)
        on left: 0
    Program <node> (50)
        on left: 1
        on right: 0
    MainClass <node> (51)
        on left: 2
        on right: 1
    VarDecl <node> (52)
        on left: 3
        on right: 4 9
    StaticVarDecl <node> (53)
        on left: 4
        on right: 5
    StaticVarDeclList <node> (54)
        on left: 5 6
        on right: 2 5
    VarDeclExpList <node> (55)
        on left: 7 8
        on right: 3 7
    Statement <node> (56)
        on left: 9 10 11 12
        on right: 13
    StatementList <node> (57)
        on left: 13 14
        on right: 2 13 26
    LeftValue <node> (58)
        on left: 15 16
        on right: 56 57
    Index <node> (59)
        on left: 17 18
        on right: 16 18 59
    Type <node> (60)
        on left: 19 20
        on right: 3 20 26 31
    PrimeType <node> (61)
        on left: 21 22 23
        on right: 19 59
    MethodCall <node> (62)
        on left: 24 25
        on right: 12 58
    StaticMethodDecl <node> (63)
        on left: 26
        on right: 27
    StaticMethodDeclList <node> (64)
        on left: 27 28
        on right: 2 27
    FormalList <node> (65)
        on left: 29 30
        on right: 26
    Arg <node> (66)
        on left: 31
        on right: 29 32
    ArgList <node> (67)
        on left: 32 33
        on right: 29 32
    Exp <node> (68)
        on left: 34 35 36 37 38 39 40 41 42 43 44 45 46 47
        on right: 10 11 17 18 25 34 35 36 37 38 39 40 41 42 43 55 60 62 64
    Term <node> (69)
        on left: 48 49 50
        on right: 34 35 36 37 38 39 40 41 42 43 47 48 49
    Factor <node> (70)
        on left: 51 52 53 54 55 56 57 58 59
        on right: 44 45 46 48 49 50
    ExpDecl <node> (71)
        on left: 60 61
        on right: 3 7
    ExpList <node> (72)
        on left: 62 63
        on right: 24
    ExpTail <node> (73)
        on left: 64 65
        on right: 62 64


State 0

    0 $accept: • Program $end

    KW_CLASS  shift, and go to state 1

    Program    go to state 2
    MainClass  go to state 3


State 1

    2 MainClass: KW_CLASS • ID '{' StaticVarDeclList StaticMethodDeclList KW_PUBLIC KW_STATIC KW_VOID MAIN '(' KW_STRING '[' ']' ID ')' '{' StatementList '}' '}'

    ID  shift, and go to state 4


State 2

    0 $accept: Program • $end

    $end  shift, and go to state 5


State 3

    1 Program: MainClass •

    $default  reduce using rule 1 (Program)


State 4

    2 MainClass: KW_CLASS ID • '{' StaticVarDeclList StaticMethodDeclList KW_PUBLIC KW_STATIC KW_VOID MAIN '(' KW_STRING '[' ']' ID ')' '{' StatementList '}' '}'

    '{'  shift, and go to state 6


State 5

    0 $accept: Program $end •

    $default  accept


State 6

    2 MainClass: KW_CLASS ID '{' • StaticVarDeclList StaticMethodDeclList KW_PUBLIC KW_STATIC KW_VOID MAIN '(' KW_STRING '[' ']' ID ')' '{' StatementList '}' '}'

    $default  reduce using rule 6 (StaticVarDeclList)

    StaticVarDeclList  go to state 7


State 7

    2 MainClass: KW_CLASS ID '{' StaticVarDeclList • StaticMethodDeclList KW_PUBLIC KW_STATIC KW_VOID MAIN '(' KW_STRING '[' ']' ID ')' '{' StatementList '}' '}'
    5 StaticVarDeclList: StaticVarDeclList • StaticVarDecl

    KW_PRIVATE  shift, and go to state 8

    $default  reduce using rule 28 (StaticMethodDeclList)

    StaticVarDecl         go to state 9
    StaticMethodDeclList  go to state 10


State 8

    4 StaticVarDecl: KW_PRIVATE • KW_STATIC VarDecl

    KW_STATIC  shift, and go to state 11


State 9

    5 StaticVarDeclList: StaticVarDeclList StaticVarDecl •

    $default  reduce using rule 5 (StaticVarDeclList)


State 10

    2 MainClass: KW_CLASS ID '{' StaticVarDeclList StaticMethodDeclList • KW_PUBLIC KW_STATIC KW_VOID MAIN '(' KW_STRING '[' ']' ID ')' '{' StatementList '}' '}'
   27 StaticMethodDeclList: StaticMethodDeclList • StaticMethodDecl

    KW_PUBLIC  shift, and go to state 12

    StaticMethodDecl  go to state 13


State 11

    4 StaticVarDecl: KW_PRIVATE KW_STATIC • VarDecl

    KW_BOOLEAN  shift, and go to state 14
    KW_INT      shift, and go to state 15
    KW_STRING   shift, and go to state 16

    VarDecl    go to state 17
    Type       go to state 18
    PrimeType  go to state 19


State 12

    2 MainClass: KW_CLASS ID '{' StaticVarDeclList StaticMethodDeclList KW_PUBLIC • KW_STATIC KW_VOID MAIN '(' KW_STRING '[' ']' ID ')' '{' StatementList '}' '}'
   26 StaticMethodDecl: KW_PUBLIC • KW_STATIC Type ID '(' FormalList ')' '{' StatementList '}'

    KW_STATIC  shift, and go to state 20


State 13

   27 StaticMethodDeclList: StaticMethodDeclList StaticMethodDecl •

    $default  reduce using rule 27 (StaticMethodDeclList)


State 14

   22 PrimeType: KW_BOOLEAN •

    $default  reduce using rule 22 (PrimeType)


State 15

   21 PrimeType: KW_INT •

    $default  reduce using rule 21 (PrimeType)


State 16

   23 PrimeType: KW_STRING •

    $default  reduce using rule 23 (PrimeType)


State 17

    4 StaticVarDecl: KW_PRIVATE KW_STATIC VarDecl •

    $default  reduce using rule 4 (StaticVarDecl)


State 18

    3 VarDecl: Type • ID ExpDecl VarDeclExpList ';'
   20 Type: Type • '[' ']'

    ID   shift, and go to state 21
    '['  shift, and go to state 22


State 19

   19 Type: PrimeType •

    $default  reduce using rule 19 (Type)


State 20

    2 MainClass: KW_CLASS ID '{' StaticVarDeclList StaticMethodDeclList KW_PUBLIC KW_STATIC • KW_VOID MAIN '(' KW_STRING '[' ']' ID ')' '{' StatementList '}' '}'
   26 StaticMethodDecl: KW_PUBLIC KW_STATIC • Type ID '(' FormalList ')' '{' StatementList '}'

    KW_BOOLEAN  shift, and go to state 14
    KW_INT      shift, and go to state 15
    KW_VOID     shift, and go to state 23
    KW_STRING   shift, and go to state 16

    Type       go to state 24
    PrimeType  go to state 19


State 21

    3 VarDecl: Type ID • ExpDecl VarDeclExpList ';'

    '='  shift, and go to state 25

    $default  reduce using rule 61 (ExpDecl)

    ExpDecl  go to state 26


State 22

   20 Type: Type '[' • ']'

    ']'  shift, and go to state 27


State 23

    2 MainClass: KW_CLASS ID '{' StaticVarDeclList StaticMethodDeclList KW_PUBLIC KW_STATIC KW_VOID • MAIN '(' KW_STRING '[' ']' ID ')' '{' StatementList '}' '}'

    MAIN  shift, and go to state 28


State 24

   20 Type: Type • '[' ']'
   26 StaticMethodDecl: KW_PUBLIC KW_STATIC Type • ID '(' FormalList ')' '{' StatementList '}'

    ID   shift, and go to state 29
    '['  shift, and go to state 22


State 25

   60 ExpDecl: '=' • Exp

    TOK_PLUS           shift, and go to state 30
    TOK_MINUS          shift, and go to state 31
    TOK_NOT            shift, and go to state 32
    KW_FALSE           shift, and go to state 33
    KW_TRUE            shift, and go to state 34
    KW_NEW             shift, and go to state 35
    INTEGER_PARSE_INT  shift, and go to state 36
    INTEGER_LITERAL    shift, and go to state 37
    STRING_LITERAL     shift, and go to state 38
    ID                 shift, and go to state 39
    '('                shift, and go to state 40

    LeftValue   go to state 41
    MethodCall  go to state 42
    Exp         go to state 43
    Term        go to state 44
    Factor      go to state 45


State 26

    3 VarDecl: Type ID ExpDecl • VarDeclExpList ';'

    ','  shift, and go to state 46

    $default  reduce using rule 8 (VarDeclExpList)

    VarDeclExpList  go to state 47


State 27

   20 Type: Type '[' ']' •

    $default  reduce using rule 20 (Type)


State 28

    2 MainClass: KW_CLASS ID '{' StaticVarDeclList StaticMethodDeclList KW_PUBLIC KW_STATIC KW_VOID MAIN • '(' KW_STRING '[' ']' ID ')' '{' StatementList '}' '}'

    '('  shift, and go to state 48


State 29

   26 StaticMethodDecl: KW_PUBLIC KW_STATIC Type ID • '(' FormalList ')' '{' StatementList '}'

    '('  shift, and go to state 49


State 30

   45 Exp: TOK_PLUS • Factor

    KW_FALSE           shift, and go to state 33
    KW_TRUE            shift, and go to state 34
    KW_NEW             shift, and go to state 35
    INTEGER_PARSE_INT  shift, and go to state 36
    INTEGER_LITERAL    shift, and go to state 37
    STRING_LITERAL     shift, and go to state 38
    ID                 shift, and go to state 39
    '('                shift, and go to state 40

    LeftValue   go to state 41
    MethodCall  go to state 42
    Factor      go to state 50


State 31

   46 Exp: TOK_MINUS • Factor

    KW_FALSE           shift, and go to state 33
    KW_TRUE            shift, and go to state 34
    KW_NEW             shift, and go to state 35
    INTEGER_PARSE_INT  shift, and go to state 36
    INTEGER_LITERAL    shift, and go to state 37
    STRING_LITERAL     shift, and go to state 38
    ID                 shift, and go to state 39
    '('                shift, and go to state 40

    LeftValue   go to state 41
    MethodCall  go to state 42
    Factor      go to state 51


State 32

   44 Exp: TOK_NOT • Factor

    KW_FALSE           shift, and go to state 33
    KW_TRUE            shift, and go to state 34
    KW_NEW             shift, and go to state 35
    INTEGER_PARSE_INT  shift, and go to state 36
    INTEGER_LITERAL    shift, and go to state 37
    STRING_LITERAL     shift, and go to state 38
    ID                 shift, and go to state 39
    '('                shift, and go to state 40

    LeftValue   go to state 41
    MethodCall  go to state 42
    Factor      go to state 52


State 33

   54 Factor: KW_FALSE •

    $default  reduce using rule 54 (Factor)


State 34

   53 Factor: KW_TRUE •

    $default  reduce using rule 53 (Factor)


State 35

   59 Factor: KW_NEW • PrimeType Index

    KW_BOOLEAN  shift, and go to state 14
    KW_INT      shift, and go to state 15
    KW_STRING   shift, and go to state 16

    PrimeType  go to state 53


State 36

   25 MethodCall: INTEGER_PARSE_INT • '(' Exp ')'

    '('  shift, and go to state 54


State 37

   51 Factor: INTEGER_LITERAL •

    $default  reduce using rule 51 (Factor)


State 38

   52 Factor: STRING_LITERAL •

    $default  reduce using rule 52 (Factor)


State 39

   15 LeftValue: ID •
   16          | ID • Index
   24 MethodCall: ID • '(' ExpList ')'

    '('  shift, and go to state 55
    '['  shift, and go to state 56

    $default  reduce using rule 15 (LeftValue)

    Index  go to state 57


State 40

   55 Factor: '(' • Exp ')'

    TOK_PLUS           shift, and go to state 30
    TOK_MINUS          shift, and go to state 31
    TOK_NOT            shift, and go to state 32
    KW_FALSE           shift, and go to state 33
    KW_TRUE            shift, and go to state 34
    KW_NEW             shift, and go to state 35
    INTEGER_PARSE_INT  shift, and go to state 36
    INTEGER_LITERAL    shift, and go to state 37
    STRING_LITERAL     shift, and go to state 38
    ID                 shift, and go to state 39
    '('                shift, and go to state 40

    LeftValue   go to state 41
    MethodCall  go to state 42
    Exp         go to state 58
    Term        go to state 44
    Factor      go to state 45


State 41

   56 Factor: LeftValue •
   57       | LeftValue • '.' KW_LENGTH

    '.'  shift, and go to state 59

    $default  reduce using rule 56 (Factor)


State 42

   58 Factor: MethodCall •

    $default  reduce using rule 58 (Factor)


State 43

   34 Exp: Exp • TOK_PLUS Term
   35    | Exp • TOK_MINUS Term
   36    | Exp • TOK_AND Term
   37    | Exp • TOK_OR Term
   38    | Exp • TOK_LESS Term
   39    | Exp • TOK_GREAT Term
   40    | Exp • TOK_LEQ Term
   41    | Exp • TOK_GREQ Term
   42    | Exp • TOK_EQ Term
   43    | Exp • TOK_NEQ Term
   60 ExpDecl: '=' Exp •

    TOK_AND    shift, and go to state 60
    TOK_OR     shift, and go to state 61
    TOK_LESS   shift, and go to state 62
    TOK_GREAT  shift, and go to state 63
    TOK_LEQ    shift, and go to state 64
    TOK_GREQ   shift, and go to state 65
    TOK_NEQ    shift, and go to state 66
    TOK_EQ     shift, and go to state 67
    TOK_PLUS   shift, and go to state 68
    TOK_MINUS  shift, and go to state 69

    $default  reduce using rule 60 (ExpDecl)


State 44

   47 Exp: Term •
   48 Term: Term • TOK_MULT Factor
   49     | Term • TOK_DIV Factor

    TOK_MULT  shift, and go to state 70
    TOK_DIV   shift, and go to state 71

    $default  reduce using rule 47 (Exp)


State 45

   50 Term: Factor •

    $default  reduce using rule 50 (Term)


State 46

    7 VarDeclExpList: ',' • ID ExpDecl VarDeclExpList

    ID  shift, and go to state 72


State 47

    3 VarDecl: Type ID ExpDecl VarDeclExpList • ';'

    ';'  shift, and go to state 73


State 48

    2 MainClass: KW_CLASS ID '{' StaticVarDeclList StaticMethodDeclList KW_PUBLIC KW_STATIC KW_VOID MAIN '(' • KW_STRING '[' ']' ID ')' '{' StatementList '}' '}'

    KW_STRING  shift, and go to state 74


State 49

   26 StaticMethodDecl: KW_PUBLIC KW_STATIC Type ID '(' • FormalList ')' '{' StatementList '}'

    KW_BOOLEAN  shift, and go to state 14
    KW_INT      shift, and go to state 15
    KW_STRING   shift, and go to state 16

    $default  reduce using rule 30 (FormalList)

    Type        go to state 75
    PrimeType   go to state 19
    FormalList  go to state 76
    Arg         go to state 77


State 50

   45 Exp: TOK_PLUS Factor •

    $default  reduce using rule 45 (Exp)


State 51

   46 Exp: TOK_MINUS Factor •

    $default  reduce using rule 46 (Exp)


State 52

   44 Exp: TOK_NOT Factor •

    $default  reduce using rule 44 (Exp)


State 53

   59 Factor: KW_NEW PrimeType • Index

    '['  shift, and go to state 56

    Index  go to state 78


State 54

   25 MethodCall: INTEGER_PARSE_INT '(' • Exp ')'

    TOK_PLUS           shift, and go to state 30
    TOK_MINUS          shift, and go to state 31
    TOK_NOT            shift, and go to state 32
    KW_FALSE           shift, and go to state 33
    KW_TRUE            shift, and go to state 34
    KW_NEW             shift, and go to state 35
    INTEGER_PARSE_INT  shift, and go to state 36
    INTEGER_LITERAL    shift, and go to state 37
    STRING_LITERAL     shift, and go to state 38
    ID                 shift, and go to state 39
    '('                shift, and go to state 40

    LeftValue   go to state 41
    MethodCall  go to state 42
    Exp         go to state 79
    Term        go to state 44
    Factor      go to state 45


State 55

   24 MethodCall: ID '(' • ExpList ')'
